# signwriting-transcription

./: .gitignore  README.md  config.py  config80.py  data_preprocessing.py  datasets_pose.py  poseData_utils.py  prepare_poses.py  pyproject.toml  swu_representation.py
.github/workflows/: lint.yaml  test.yaml
data/: README.md  collect.py  collect_poses.py  data.csv  data_segmentation.csv  get_data.py  segment_data.py
data_preparation/: config.py  data_preprocessing.py  datasets_pose.py  download_script.py  poseData_utils.py  pose_data_utils.py  prepare_poses.py  swu_representation.py
joeynmt/: data.py  hub_interface.py  prediction.py  tokenizers.py
output/posses/: config.yaml  dev.tsv  spm_bpe40.model  spm_bpe40.vocab  train.tsv  train.txt
output/posses/fbank534/: test.npy  test2.npy  test3.npy
signwriting_transcription/pose_to_signwriting/: Online_bash_file.sh  README.md  bin.py  fine_tune.sh  joeynmt_pose_to_signwriting.ipynb  pipeline.sh  pretrain.sh  start.sh  start_pretrained_session.sh  upload_model.sh
signwriting_transcription/pose_to_signwriting/analyzing/: analyze_log_data.py
signwriting_transcription/pose_to_signwriting/data/: config.py  datasets_pose.py  pose_data_utils.py  prepare_poses.py  prepare_pretrain.py  preprocessing.py  pretrain_config.py
signwriting_transcription/pose_to_signwriting/joeynmt_pose/: credentials.json  data.py  prediction.py  swu_tokenizer.py  token.json  tokenizer.py  training.py  upload_to_huggingface.py  upload_to_sheets.py
signwriting_transcription/pose_to_vq_to_signwriting/: README.md  create_parallel_data.py  evaluate.py  prepare_data.sh  train_sockeye_model.sh
training/: evaluation.py  pose_data.py  prediction.py  swu_tokenizer.py  train.py
