[project]
name = "signwriting-transcription"
description = "Transcribe single signs into SignWriting"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" },
    { name = "Rotem Zolbermn", email = "rotemzil2203@gmail.com" },
    { name = "Ohad Langer", email = "ohadlanger1@gmail.com" }
]
readme = "README.md"
dependencies = [
    "pose-format",
    "tqdm",
    "mediapipe",
    "signwriting @ git+https://github.com/sign-language-processing/signwriting",
    "signwriting-evaluation @ git+https://github.com/RotemZilberman/signwriting-evaluation"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint"
]

[tool.poetry.extras]
pose_to_signwriting = ["joeynmt @ git+https://github.com/may-/joeys2t"]
pose_to_vq_to_signwriting = []

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0116", # Missing function or method docstring
]

[tool.setuptools]
packages = [
    "signwriting_transcription"
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["signwriting_transcription"]
