[project]
name = "signwriting-transcription"
description = "Transcribe single signs into SignWriting"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" },
    { name = "Rotem Zolbermn", email = "rotemzil2203@gmail.com" },
    { name = "Ohad Langer", email = "ohadlanger1@gmail.com" }
]
readme = "README.md"
dependencies = [
    "pose-format",
    "tqdm",
    "mediapipe",
    "signwriting @ git+https://github.com/sign-language-processing/signwriting",
    "signwriting-evaluation @ git+https://github.com/sign-language-processing/signwriting-evaluation.git",
    "google-api-python-client",
    "pympi-ling",
    "sentencepiece",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint"
]

[tool.poetry.extras]
pose_to_signwriting = ["joeynmt @ git+https://github.com/may-/joeys2t.git@4532e8b9b990c8a3c4ccfe9fbd141bddc6d8637b"]
pose_to_vq_to_signwriting = ["sign-vq @ git+https://github.com/sign-language-processing/sign-vq.git"]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]
good-names = ["ms"]

[tool.setuptools]
packages = [
    "signwriting_transcription",
    "signwriting_transcription.pose_to_signwriting",
    "signwriting_transcription.pose_to_signwriting.data",
    "signwriting_transcription.pose_to_signwriting.joeynmt_pose",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["signwriting_transcription"]

[project.scripts]
pose_to_signwriting = "signwriting_transcription.pose_to_signwriting.bin:main"
